add a button for going back to homepage

--- a/test2.html
+++ b/test2.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>My hobby</h1>
+  <a href = "/">go back to my home page.</a>
+<p>Badminton.</p>
 
 </body>
 </html>
