--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Hey my name is Yifan Li</h1>
-  <a herf = "test2.html"> Want to see my hobby</a>
+  <a herf = "/test2.html"> Want to see my hobby</a>
 <p>My first paragraph.</p>
 
 </body>
