--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
+
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
+
+
+        <link href='https://fonts.googleapis.com/css?family=Waiting for the Sunrise' rel='stylesheet'>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link  rel="stylesheet" href="stylesheet/style.css" >
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +15,10 @@
     </head>
     <body>
 
-        <ul class="fly-in-text hidden">
+      <div class="welcome-section content-hidden">
+        <div class="content-wrap">
+
+          <ul class="fly-in-text">
             <li>H</li>
             <li>i</li>
             <li>,</li>
@@ -23,9 +30,10 @@
             <li>O</li>
             <li>M</li>
             <li>E</li>
-        </ul>
-        <a href="#" class="enter-button">open it</a>
+          </ul>
+          <a href="#" class="enter-button">open</a>
+        </div>
 
-
+      </div>
     </body>
 </html>
