add more features

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
         <link href='https://fonts.googleapis.com/css?family=Waiting for the Sunrise' rel='stylesheet'>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link  rel="stylesheet" href="stylesheet/style.css" >
+        <link  rel="stylesheet" href="stylesheet/style2.css" >
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script type="text/javascript" src="js/animation.js" ></script>
+        <a href="second.html" class="enter-button">Open</a>
         <title>index</title>
     </head>
     <body>
@@ -30,10 +32,13 @@
             <li>O</li>
             <li>M</li>
             <li>E</li>
+            <li>.</li>
           </ul>
-          <a href="#" class="enter-button">open</a>
+
+          <button onclick="visitPage()" class="enter-button" >open</button>
         </div>
 
       </div>
+
     </body>
 </html>
