add more features

--- a/secondPage.html
+++ b/secondPage.html
@@ -120,7 +120,7 @@
               <!-- <p>Adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p> -->
             </div>
           </div>
-          <h2>marathon</h2>
+          <h2>marathon:</h2>
           <div class="col-md-6 col-sm-6">
             <div class="info-right1">
               <div class="col-md-6 col-sm-1">
