--- a/secondPage.html
+++ b/secondPage.html
@@ -124,12 +124,12 @@
           <div class="col-md-6 col-sm-6">
             <div class="info-right1">
               <div class="col-md-6 col-sm-1">
-              <img src="img/m1.jpg">
+              <img src="img/M1.jpg">
              </div>
             </div>
             <div class="info-right2">
               <div class="col-md-6 col-sm-5">
-              <img src="img/m2.jpg">
+              <img src="img/M2.jpg">
               </div>
             </div>
           </div>
