add title to two photo

--- a/secondPage.html
+++ b/secondPage.html
@@ -125,11 +125,13 @@
             <div class="info-right1">
               <div class="col-md-6 col-sm-1">
               <img src="img/1.jpg">
+              <h4>New York</h4>
              </div>
             </div>
             <div class="info-right2">
               <div class="col-md-6 col-sm-5">
               <img src="img/2.jpg">
+              <h4>Chicago</h4>
               </div>
             </div>
           </div>
