add title to two photo

--- a/secondPage.html
+++ b/secondPage.html
@@ -60,7 +60,7 @@
 
     <section id="myskill">
       <div class="container">
-        <h2>My Tech Skill</h2>
+        <h2>My Tech Skill & Projects</h2>
         <div class="box">
           <!-- <div class="row"> -->
             <!-- <div class="col-md-3 col-sm-6"> -->
