--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link  rel="stylesheet" href="stylesheet/style2.css" >
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script type="text/javascript" src="js/animation.js" ></script>
+        <!-- <script type="text/javascript" src="js/animation.js" ></script> -->
         <a href="second.html" class="enter-button">Open</a>
         <title>index</title>
     </head>
