--- a/index.html
+++ b/index.html
@@ -1,44 +1,245 @@
 
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-
-
-        <link href='https://fonts.googleapis.com/css?family=Waiting for the Sunrise' rel='stylesheet'>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link  rel="stylesheet" href="stylesheet/style.css" >
-        <link  rel="stylesheet" href="stylesheet/style2.css" >
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <!-- <script type="text/javascript" src="js/animation.js" ></script> -->
-        <a href="second.html" class="enter-button">Open</a>
-        <title>index</title>
-    </head>
-    <body>
-
-      <div class="welcome-section content-hidden">
-        <div class="content-wrap">
-
-          <ul class="fly-in-text">
-            <li>H</li>
-            <li>i</li>
-            <li>,</li>
-            <br>
-            <li>W</li>
-            <li>E</li>
-            <li>L</li>
-            <li>C</li>
-            <li>O</li>
-            <li>M</li>
-            <li>E</li>
-            <li>.</li>
-          </ul>
-
-          <button onclick="visitPage()" class="enter-button" >open</button>
+  <head>
+    <meta charset="utf-8">
+    <title>My site</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto%7CJosefin+Sans:100,300,400,500" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheet/style2.css">
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Waiting for the Sunrise' rel='stylesheet'>
+  </head>
+  <body>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Yifan Li</a>
         </div>
-
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <!-- navbar-right moves the navbar to the right -->
+            <li><a href="#mysite">Home</a></li>
+            <li><a href="#intern">Working Experience</a></li>
+            <li><a href="#myskill">Skill</a></li>
+            <li><a href="#interest">Interest</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
+    </nav>
 
-    </body>
+    <section id="mysite">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-sm-6">
+            <div class="mysite-left">
+              <img src="img/img1.png" alt="Avatar">
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-6">
+            <div class="mysite-right">
+              <h2>Hi there, My name is Yifan Li. Welcome to my website!</h2>
+              <!-- <p></p> -->
+            </div>
+            <br>
+            <!-- <a class="btn btn-default btn-lg mysite-btn">Click here to know more about me</a> -->
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+
+    <section id="myskill">
+      <div class="container">
+        <h2>My Tech Skill & Projects</h2>
+        <div class="box">
+          <!-- <div class="row"> -->
+            <!-- <div class="col-md-3 col-sm-6"> -->
+              <div class="box1">
+                <img src="img/python.png">
+                <h3>Python</h3>
+              </div>
+            <!-- <div class="col-md-3 col-sm-6"> -->
+              <div class="box2">
+                <img src="img/html.jpg">
+                <h3>html</h3>
+              </div>
+            <!-- <div class="col-md-3 col-sm-6"> -->
+              <div class="box3">
+                <img src="img/jupyter.png">
+                <h3>jupter</h3>
+              </div>
+        </div>
+      </div>
+        <!-- </div> -->
+    </section>
+
+
+    <section id="intern">
+      <div class="container">
+        <div class="row">
+          <div class=" ">
+            <div class="info-left">
+              <!-- <img src="img/image2.png"> -->
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-6">
+            <div class="info-right">
+              <h2>My working experience</h2>
+              <ul>
+                <li>Merry Inc. @Suzhou, China</li>
+                <li>Math tutor @Boulder, USA</li>
+                <li>Catering deliery @CU Boulder </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <hr>
+
+    <section id="interest">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-sm-6">
+            <div class="info-left">
+              <h2>My interest</h2>
+              <h4>travel</h4>
+              <img src="img/travel.jpg">
+
+              <!-- <p>Adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p> -->
+            </div>
+          </div>
+          <h2>marathon:</h2>
+          <div class="col-md-6 col-sm-6">
+            <div class="info-right1">
+              <div class="col-md-6 col-sm-1">
+              <img src="img/1.jpg">
+              <h4>New York</h4>
+             </div>
+            </div>
+            <div class="info-right2">
+              <div class="col-md-6 col-sm-5">
+              <img src="img/2.jpg">
+              <h4>Chicago</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="container">
+        <div class="row">
+          <h2>Contact</h2>
+          <div class="col-md-5 col-sm-5">
+            <form>
+              <div class="form-group">
+                <label>Name: Yifan Li </label>
+                <!-- <input class="form-control" type="text" name="" value="" placeholder="Enter Name"> -->
+              </div>
+              <div class="form-group">
+                <label>Email: yifanli3001@gmail.com </label>
+                <!-- <input class="form-control" type="text" name="" value="" placeholder="Enter Email"> -->
+              </div>
+              <!-- <button class="btn btn-default">Submit</button> -->
+            </form>
+          </div>
+          <div class="col-md-7 col-sm-7">
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <p class="text-center">mysite Copyright &copy; 2017</p>
+    </footer>
+
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <script>
+        window.sr = ScrollReveal();
+        sr.reveal('.navbar', {
+          duration: 2000,
+          origin:'bottom'
+        });
+        sr.reveal('box', {
+          duration: 2000,
+          origin:'bottom'
+        });
+        sr.reveal('.navbar', {
+          duration: 2000,
+          origin:'bottom'
+        });
+        sr.reveal('.navbar', {
+          duration: 2000,
+          origin:'bottom'
+        });
+        sr.reveal('.mysite-left', {
+          duration: 2000,
+          origin:'top',
+          distance:'500px'
+        });
+        sr.reveal('.mysite-right', {
+          duration: 2000,
+          origin:'right',
+          distance:'300px'
+        });
+        sr.reveal('.mysite-btn', {
+          duration: 2000,
+          delay: 2000,
+          origin:'bottom'
+        });
+        sr.reveal('#testimonial div', {
+          duration: 2000,
+          origin:'bottom'
+        });
+        sr.reveal('.info-left', {
+          duration: 2000,
+          origin:'left',
+          distance:'300px',
+          viewFactor: 0.2
+        });
+        sr.reveal('.info-right', {
+          duration: 2000,
+          origin:'right',
+          distance:'300px',
+          viewFactor: 0.2
+        });
+    </script>
+
+    <script>
+    $(function() {
+      // Smooth Scrolling
+      $('a[href*="#"]:not([href="#"])').click(function() {
+        if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+          var target = $(this.hash);
+          target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+          if (target.length) {
+            $('html, body').animate({
+              scrollTop: target.offset().top
+            }, 1000);
+            return false;
+          }
+        }
+      });
+    });
+    </script>
+  </body>
 </html>
