--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="mysite-left">
-              <img src="img/img1.png" alt="Avatar">
+              <img class="my" src="img/img1.png" alt="Avatar">
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
