--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Yifan Li</a>
+          <!-- <a class="navbar-brand" href="#">Yifan Li</a> -->
+          <a href="#"><img id="logo" src="/Users/yifanli/Documents/GitHub/PersonalWebsite/img/logo.png"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
