--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <span class="icon-bar"></span>
           </button>
           <!-- <a class="navbar-brand" href="#">Yifan Li</a> -->
-          <a href="#"><img id="logo" src="/Users/yifanli/Documents/GitHub/PersonalWebsite/img/logo.png"></a>
+          <a class="navbar-brand" href="#"><img id="logo" src="/Users/yifanli/Documents/GitHub/PersonalWebsite/img/logo.png" width="70" 
+            height="70" ></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
